Re-add rule that enforce max line lenght
It has been added to the config file .swiftlint.yml with a max parameter of 140 characters
Fix warning caused by this rule

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,5 +1,5 @@
 disabled_rules: 
-  - line_length
+#  - line_length
 
 opt_in_rules:
   - empty_count
@@ -10,3 +10,4 @@ included:
 excluded:
   - Pods
 
+line_length: 140
